[package]
name = "geocode"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2018"
description = "Geocoding proxy service"
license = "MIT"

[dependencies]
clap = "2.32.0"
futures = "0.1.25"
hyper = "0.12.18"
hyper-tls = "0.3.1"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
url = "1.7.2"
